# aiagent

./: .gitignore  AI_CONFIG_FIX_GUIDE.md  DATABASE_CONFIG_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CONFIG_GUIDE.md  DEPLOYMENT_TROUBLESHOOTING.md  FRONTEND_API_FIX.md  GEMINI_CONFIG_TROUBLESHOOTING.md  GEMINI_FIX_TOOLS.md  LICENSE  PRODUCTION_DEPLOYMENT_FIX.md  QUICK_START.md  README.md  UBUNTU_DEPLOYMENT_GUIDE.md  UBUNTU_DEPLOY_GUIDE.md  UBUNTU_TROUBLESHOOTING.md  deploy-mcp-patch.sh  deploy-production-mcp-fix.sh  deploy-production.sh  description.md  diagnose-build-issue.sh  diagnose-gemini-issue.js  diagnose-remote-api.sh  diagnose-server.sh  diagnose.sh  ecosystem.config.js  fix-502-error.sh  fix-build-issue.sh  fix-cors-issue.sh  fix-deployment.sh  fix-frontend-api-config.sh  fix-frontend-deployment.sh  fix-gemini-config.js  fix-production-gemini.sh  fix-production-mcp.sh  fix-production.sh  fix-remote-api.sh  force-update-pm2.sh  install-ubuntu.sh  install.sh  (+12 more)
backend/api/mcp-yfinance-server/: CONTRIBUTING.md  IDE_INTEGRATION_GUIDE.md  INTEGRATION_GUIDE.md  LICENSE  README.md  TRAE_AI_QUICK_SETUP.md  TRAE_AI_USAGE.md  debug_dates.py  debug_test.py  demo_stock_price_server.py  install_dependencies.sh  main.py  mcp_config.json  pyproject.toml  server.py  setup_claude_desktop.sh  setup_trae_ai.md  setup_trae_ai.sh  simple_stock_server.py  standard_mcp_server.py  start_mcp.sh  start_server.sh  test_analyze.py  test_mcp.py  test_simple.py
backend/api/mcp-yfinance-server/results/: apple-stock-chart.tsx  tools.md
backend/api/mcp-yfinance-server/source/: simple_yf_server.py  (+2 more)
(+205 files in other folders)
