[project]
name = "mcp-yfinance-server"
version = "0.1.0"
description = "A Yfinance Server project"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "yfinance>=0.2.55",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "typing-extensions>=4.5.0",
    "textblob>=0.19.0",
    "matplotlib>=3.10.1",
    "ipython>=9.1.0",
]

[[project.authors]]
name = "Aditya Ak"
email = "aakuskar.980@gmail.com"

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp-yfinance-server"]

[tool.setuptools.package-dir]
"mcp-yfinance-server" = "source"


